# ebp

./: .gitignore  CITATION.cff  LICENSE  README.md  convert_pusht_dataset.py  demo_push_t.py  eval_push_t.py  generate_data.py  plot_coordinate_regression.py  plot_make_moons.py  plot_push_t.py  pyproject.toml  requirements.txt  train.py
ebp/: ibc.py  loss.py  models.py  modules.py  optimizers.py  rnce.py  trainer.py  utils.py
ebp/networks/: models.py  proposal_network.py
ebp/tasks/: __init__.py  make_moons.py
ebp/tasks/pusht/: __init__.py  demo_push_t.py  pusht_env.py  pusht_keypoints_env.py  pymunk_keypoint_manager.py
scripts/: generate_coordinate_regression_dataset.sh  generate_make_moons_dataset.sh  generate_push_t_dataset.sh  train_coordinate_regression.sh  train_make_moons.sh  train_push_t.sh
tasks/: coordinate_regression.py
tests/: test_dataset.py  test_model.py  test_optimizer.py  test_rnce.py
wandb/: latest-run
wandb/offline-run-20260721_112914-2ezrevsx/: run-2ezrevsx.wandb
wandb/offline-run-20260721_112914-2ezrevsx/files/: requirements.txt
wandb/offline-run-20260721_112933-jc1ievna/: run-jc1ievna.wandb
wandb/offline-run-20260721_113004-if14kfam/: run-if14kfam.wandb
wandb/offline-run-20260721_120123-u81q7uj9/: run-u81q7uj9.wandb
wandb/offline-run-20260721_120137-6hqpug00/: run-6hqpug00.wandb
wandb/run-20260721_114437-7fmxnkss/: run-7fmxnkss.wandb
wandb/run-20260721_114706-1qz1bcpp/: run-1qz1bcpp.wandb
wandb/run-20260721_115211-g8n5517i/: run-g8n5517i.wandb
wandb/run-20260721_115706-2fyabj3h/: run-2fyabj3h.wandb
(+12 files in other folders)
