[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "ebp"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "numpy", "tqdm", "pygame", "matplotlib",
    "wandb", "tensorboard", "scipy", "torch>=2.7", "torchvision",
    "scikit-learn",
    "gymnasium",
    # Push-T env stack. pymunk 7.0 removed Space.add_collision_handler, which
    # the vendored env uses; zarr 3.x changed the API used to read the official
    # Diffusion Policy dataset.
    "pymunk>=6.6,<7", "shapely>=2.0", "opencv-python", "scikit-image", "zarr<3",
]

[project.optional-dependencies]
dev = ["pytest", "ipykernel"]

[tool.setuptools.packages.find]
include = ["ebp*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
